# raspiCamera

./: CMakeLists.txt  cameraClient.cpp  cameraServer.cpp
